unified_tests/tests/group_declaration_with_nested_group_declaration/expect/build.text.stderr
lib.test.copp:2:5: error: nested test groups are not allowed
      group "Inner" {
      ^
